--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,17 +6,21 @@
 @import 'base/style';
 
 @import 'components/header';
-
 @import 'components/menu';
 @import 'components/icon';
 @import 'components/form';
 @import 'components/nav';
 @import 'base/logo';
-// @import 'components/hero';
-// @import 'components/timer';
-// @import 'components/promo-cards';
-// @import 'components/promo-card';
-// @import 'components/goods';
+
+@import 'components/hero';
+@import 'components/timer';
+
+@import 'components/promo-cards';
+@import 'components/promo-card';
+
+@import 'components/goods-discount';
+@import 'components/card';
+
 @import 'components/footer';
 
 // @import 'components/blog';
