--- a/src/scss/base/_templates.scss
+++ b/src/scss/base/_templates.scss
@@ -18,24 +18,18 @@
   color: inherit;
 }
 
-// переопределить
-
-
-
-%spanDiscount {
+%before {
+  content: '';
   position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 88px;
-  height: 88px;
-  font-size: 30px;
-  border-radius: 50%;
-  background-color: $orange;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
+// переопределить
+
 %promoCardText {
-  font-family: Lato;
   font-size: 30px;
   font-weight: 700;
   line-height: 130%;
