--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -13,19 +13,19 @@
 }
   
   &__content {
+    position: relative;
     height: 480px;
     padding: 40px;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
-    background-image: url(../img/banner-one.jpeg);
+    background-image: url(../img/hero/banner-one.jpeg);
     background-image: image-set(
-      url('../img/banner-one.avif'),
-      url('../img/banner-one.webp'),
-      url('../img/banner-one.jpg')
+      url('../img/hero/banner-one.avif'),
+      url('../img/hero/banner-one.webp'),
+      url('../img/hero/banner-one.jpeg')
     );
     background-image: -webkit-image-set(
-      url('../img/banner-one.avif'),
-      url('../img/banner-one.webp'),
-      url('../img/banner-one.jpg')
+      url('../img/hero/banner-one.avif'),
+      url('../img/hero/banner-one.webp'),
+      url('../img/hero/banner-one.jpeg')
     );
     background-size: cover;
     background-position: center;
@@ -48,9 +48,31 @@
       text-align: center;
       background-position-x: -100px;
     }
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 20px;
+      background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+
+
+      @include laptop {
+        border-radius: 16px; 
+      }
+      
+      @include mobile {
+        border-radius: 8px;
+      }
+    }
   }
   
   &__title {
+    position: relative;
+    z-index: 2;
     margin-bottom: 80px;
     padding-top: 106px;
     padding-left: 72px;
@@ -81,11 +103,11 @@
   }
   
   &__timer {
+    position: relative;
+    z-index: 2;
     max-width: min-content;
     margin: 0 auto;
     text-align: center;
     color: $white;
   }
 }
-
-  
