--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -23,9 +23,9 @@
 
 @import 'components/footer';
 
-// @import 'components/blog';
-// @import 'components/blog-item';
-// @import 'components/blog-pagination';
+@import 'components/blog';
+@import 'components/blog-item';
+@import 'components/blog-pagination';
 
 // @import 'components/article-header';
 // @import 'components/article';
