cardPage article page

--- a/src/scss/components/_article.scss
+++ b/src/scss/components/_article.scss
@@ -1,4 +1,4 @@
-.article-page {
+.section-article {
   padding-top: 30px;
   padding-bottom: 150px;
   flex: 1 1 auto;
@@ -17,41 +17,27 @@
     padding-top: 0;
     padding-bottom: 52px;
   }
-}
 
-.article-container {
-  display: grid;
-  grid-template-columns: 1fr 532px;
-  grid-template-rows: minmax(21px, min-content) min-content minmax(min-content, 1fr);
-  grid-template-areas: 
-    'header header'
-    'article aside'
-    'footer aside';
+  &__container {
+    display: grid;
+    grid-template-columns: 1fr 532px;
     gap: 80px;
-
-    @include laptop {
-      grid-template-columns: 1fr 300px;
-        gap: 60px 20px;
-    }
-    
-    @include tablet {
-      grid-template-columns: 1fr;
-      grid-template-areas: 
-        'header'
-        'article'
-        'footer'
-        'aside';
-      gap: 35px;
-    }
-    
-    @include mobile {
-      gap: 30px;
-    }
+  
+      @include laptop {
+        grid-template-columns: 1fr 300px;
+          gap: 20px;
+      }
+      
+      @include tablet {
+        grid-template-columns: 1fr;
+        gap: 60px;
+      }
+  }
 }
 
-.article-main {
-  grid-area: article;
-  margin-bottom: 20px;
+.article {
+  display: flex;
+  flex-direction: column;
 
   
 @include laptop {
@@ -67,6 +53,24 @@
     
     @include laptop {
       gap: 40px;
+    }
+
+    @include tablet {
+      gap: 20px;
+    }
+
+    @include mobile {
+      gap: 10px;
+    }
+  }
+
+  &__content-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+
+    @include laptop {
+      gap: 30px;
     }
 
     @include tablet {
