--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -24,14 +24,13 @@
 @import 'components/footer';
 
 @import 'components/blog';
-@import 'components/blog-item';
+@import 'components/blog-article';
 @import 'components/blog-pagination';
 
-// @import 'components/article-header';
-// @import 'components/article';
-// @import 'components/article-footer';
-// @import 'components/aside';
+@import 'components/article';
+@import 'components/article-footer';
+@import 'components/aside';
 
-// @import 'components/card';
+@import 'components/card-page';
 // @import 'components/bread'
 
