--- a/src/scss/components/_article-footer.scss
+++ b/src/scss/components/_article-footer.scss
@@ -1,16 +1,13 @@
 .article-footer {
-  grid-area: footer;
 
-  &__container {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
   &__navigation {
     display: flex;
     flex-wrap: nowrap;
-    flex-direction: row;
+    align-self: end;
   }
 
   &__link {
@@ -43,8 +40,7 @@
       width: 24px;
       height: 24px;
       background-size: 24px 24px;
-      background: url("../img/sprite.svg#backspace") center no-repeat;
-      // background: url("../img/svg/backspace.svg") center no-repeat;
+      background: url("../img/svg/backspace.svg") center no-repeat;
       transition: background-image .3s ease-in-out;
 
       @include mobile {
@@ -59,8 +55,7 @@
     }
   
     &:hover::before {
-      background-image: url("../img/sprite.svg#backspaceblue");
-      // background: url("../img/svg/backspaceblue.svg") center no-repeat;
+      background: url("../img/svg/backspaceblue.svg") center no-repeat;
     }
   
     &:focus {
@@ -72,7 +67,7 @@
     }
   }
 
-  &__development {
+  &__info-wrapper {
     display: flex;
     flex-direction: column;
     align-items: end;
