--- a/src/scss/components/_card-page.scss
+++ b/src/scss/components/_card-page.scss
@@ -1,4 +1,4 @@
-.card {
+.card-item {
   padding-top: 40px;
   padding-bottom: 50px;
 
@@ -49,7 +49,6 @@
       'img'
       'book'
       'description';
-
     }
   }
   
@@ -119,37 +118,34 @@
       max-width: 280px;
       margin-bottom: 20px;
     }
+  }
 
+  &__discount {
+    color: $white;
+    top: 20px;
+    right: 50px;
 
-    p {
-      @extend %promoCardDiscount;
-      color: $white;
-      top: 20px;
-      right: 50px;
-
-      @include laptop {
-        top: 10px;
-        right: 30px;
-        width: 66px;
-        height: 66px;
-        font-size: 20px;
-      }
-  
-      @include tablet {
-        width: 50px;
-        height: 50px;
-        font-size: 16px;     
-      }
-  
-      @include mobile {
-        top: 5px;
-        right: 5px;
-        width: 32px;
-        height: 32px;
-        font-size: 12px;  
-      }
+    @include laptop {
+      top: 10px;
+      right: 30px;
+      width: 66px;
+      height: 66px;
+      font-size: 20px;
     }
 
+    @include tablet {
+      width: 50px;
+      height: 50px;
+      font-size: 16px;     
+    }
+
+    @include mobile {
+      top: 5px;
+      right: 5px;
+      width: 32px;
+      height: 32px;
+      font-size: 12px;  
+    }
   }
   
   &__book {
@@ -459,7 +455,7 @@
   
   &__description-title {
     margin-bottom: 20px;
-    @extend %titleFooter;
+    @extend %title3;
 
     @include laptop {
       font-size: 24px;
