render card & goods

--- a/src/scss/components/_card-page.scss
+++ b/src/scss/components/_card-page.scss
@@ -120,6 +120,12 @@
     }
   }
 
+  &__img {
+    object-fit: contain;
+    max-height: 427px;
+    object-position: top;
+  }
+
   &__discount {
     color: $white;
     top: 20px;
