--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -41,6 +41,8 @@
     max-height: 295px;
     object-fit: cover;
     border-radius: 14px;
+    width: 100%;
+    height: auto;
 
     @include laptop {
       max-width: 300px;
