--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -19,7 +19,10 @@
 @import 'components/promo-card';
 
 @import 'components/goods-discount';
-@import 'components/card';
+
+@import 'components/goods';
+@import 'components/product';
+
 
 @import 'components/footer';
 
@@ -31,6 +34,10 @@
 @import 'components/article-footer';
 @import 'components/aside';
 
-@import 'components/card-page';
+@import 'components/card';
+
+@import 'components/shop';
+
+// @import 'components/card-page';
 // @import 'components/bread'
 
