--- a/src/scss/base/_style.scss
+++ b/src/scss/base/_style.scss
@@ -51,6 +51,7 @@ ul {
 h1,
 h2,
 h3,
+h4,
 p,
 figure {
   margin: 0;
@@ -102,6 +103,7 @@ fieldset {
   min-height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .container {
