--- a/src/scss/base/_templates.scss
+++ b/src/scss/base/_templates.scss
@@ -27,6 +27,14 @@
   height: 100%;
 }
 
+%lineGray {
+  position: absolute;
+  bottom: calc(50% - 1px);
+  width: 100%;
+  height: 1px;
+  background-color: $gray;
+}
+
 // переопределить
 
 %promoCardText {
