реализована вся логика работы сайта без профиля

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -27,6 +27,7 @@
 @import 'components/footer';
 
 @import 'components/blog';
+@import 'components/blog-item';
 @import 'components/blog-article';
 @import 'components/blog-pagination';
 
@@ -37,7 +38,17 @@
 @import 'components/card';
 
 @import 'components/shop';
+@import 'components/cart';
+@import 'components/delivery';
+@import 'components/item-cart';
+@import 'components/info';
+
+
+@import 'components/search';
+
+@import 'components/overlay';
+@import 'components/error';
 
 // @import 'components/card-page';
-// @import 'components/bread'
+@import 'components/bread'
 
