--- a/src/scss/components/_category-goods.scss
+++ b/src/scss/components/_category-goods.scss
@@ -1,4 +1,4 @@
-.goods {
+.category-goods {
   padding-top: 50px;
   padding-bottom: 140px;
 
@@ -58,17 +58,5 @@
       row-gap: 30px;
     }
 	}
-
-  &__list li:nth-last-child(-n+2) {
-    display: none;
-
-    @include laptop {
-      display: flex;
-    }
-
-    @include mobile {
-      display: none;
-    }
-  }
 }
 
