--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -18,7 +18,7 @@
 @import 'components/promo-cards';
 @import 'components/promo-card';
 
-@import 'components/goods-discount';
+@import 'components/category-goods';
 
 @import 'components/goods';
 @import 'components/product';
@@ -50,5 +50,8 @@
 @import 'components/error';
 
 // @import 'components/card-page';
-@import 'components/bread'
+@import 'components/bread';
+
+@import 'components/catalog';
+
 
