--- a/src/scss/components/_product.scss
+++ b/src/scss/components/_product.scss
@@ -32,23 +32,14 @@
 
 	&__img-wrapper {
     position: relative;
-    display: block;
+    display: flex;
+
     max-width: 420px;
     max-height: 295px;
-    width: 100%;
     height: 100%;
     margin-bottom: 5px;
     line-height: 0;
-	}
-
-	&__img {
-    max-width: 420px;
-    max-height: 295px;
-    object-fit: contain;
-    border-radius: 14px;
-    width: 100%;
-    height: auto;
-
+    
     @include laptop {
       max-width: 300px;
     }
@@ -63,6 +54,14 @@
       max-width: 130px;
       max-height: 130px;
     }
+	}
+
+	&__img {
+
+    object-fit: contain;
+    border-radius: 14px;
+    width: 100%;
+    height: auto;
 	}
 
 	&__discount {
@@ -102,7 +101,7 @@
     }
 
     @include mobile {
-      font-size: 16px;
+      font-size: 14px;
     }
 	}
 
