--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -16,7 +16,7 @@
     position: relative;
     height: 480px;
     padding: 40px;
-    background-image: url(../img/hero/banner-one.jpeg);
+    background-image: url(../img/hero/banner-one.jpg);
     background-image: image-set(
       url('../img/hero/banner-one.avif'),
       url('../img/hero/banner-one.webp'),
