--- a/src/scss/base/_style.scss
+++ b/src/scss/base/_style.scss
@@ -100,11 +100,12 @@ fieldset {
 }
 
 .wrapper {
-  min-height: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
+
 
 .container {
   --max-width: 1770px;
