--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -43,6 +43,9 @@
 @import 'components/item-cart';
 @import 'components/info';
 
+@import 'components/favorite';
+@import 'components/profile';
+
 
 @import 'components/search';
 
